# evalarena

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EVAL.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  run_dev.sh
.github/workflows/: ci.yml
src/evalarena/: __init__.py  app.py  cli.py  seed_templates.py  webhooks.py
src/evalarena/api/: arena.py  dashboard.py  extras.py  extras_v090.py  keys.py  leaderboard.py  models.py  providers.py  search_streaks.py  stats.py  tags.py  templates.py  tournaments.py  vote.py
src/evalarena/core/: elo.py  glicko2.py  models.py
src/evalarena/db/: database.py  models.py
src/evalarena/providers/: __init__.py  anthropic_provider.py  base.py  mock_provider.py  openai_provider.py  registry.py
src/evalarena/static/: i18n.js
src/evalarena/templates/: 404.html  arena.html  auto_battle.html  base.html  battles.html  compare.html  compare_matrix.html  index.html  leaderboard.html  model_detail.html
tests/: conftest.py  test_api.py  test_arena.py  test_categories.py  test_database.py  test_elo.py  test_enhancements.py  test_leaderboard.py  test_models.py  test_new_features.py  test_rate_limit.py  test_v040_features.py  test_v050_features.py  test_v060_features.py  test_v070_features.py  test_v080_features.py  test_v090_features.py  test_vote.py
