[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evalarena"
version = "0.6.0"
description = "LLM evaluation arena - side-by-side model comparison with human preference scoring"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jane-o-O-o-O" },
]
keywords = ["llm", "evaluation", "arena", "elo-rating", "comparison"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "pydantic>=2.0",
    "jinja2>=3.1",
    "click>=8.0",
    "aiosqlite>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
evalarena = "evalarena.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/evalarena"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
